<resources>
    <string name="app_name">MIPT</string>
    <string name="calculate">Skaičiuoti</string>
    <string name="mc">MC</string>
    <string name="ms">MS</string>
    <string name="mminus">M-</string>
    <string name="mplus">M+</string>
    <string name="backspace">⬅</string>
    <string name="ce">CE</string>
    <string name="clear">C</string>
    <string name="plusminus">±</string>
    <string name="sqrRoot">√</string>
    <string name="_1x">1/x</string>
    <string name="minus">-</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_7">7</string>
    <string name="_1">1</string>
    <string name="multiply">*</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="divide">/</string>
    <string name="percentage">%</string>
    <string name="_4">4</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="equal">=</string>
    <string name="comma">.</string>
    <string name="plus">+</string>
    <string name="mr">MR</string>
    <string name="_0">0</string>
</resources>