<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:backgroundTint="#959494">
    <androidx.gridlayout.widget.GridLayout
            android:layout_width="344dp"
            android:layout_height="298dp"
            app:columnCount="5" app:rowCount="6" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="417dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="198dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="34dp" android:layout_marginEnd="33dp" app:layout_constraintEnd_toEndOf="parent">
        <Button
                android:text="@string/mc"
                android:layout_width="60dp"
                android:layout_height="wrap_content" android:id="@+id/memClear" android:padding="0dp"
                android:layout_marginEnd="10dp" android:textStyle="bold"/>
        <Button
                android:text="@string/mr"
                android:layout_width="60dp"
                android:layout_height="wrap_content" android:id="@+id/memR" android:padding="0dp"
                android:layout_marginEnd="10dp" android:textStyle="bold"/>
        <Button
                android:text="@string/ms"
                android:layout_width="60dp"
                android:layout_height="wrap_content" android:id="@+id/memS" android:padding="0dp"
                android:layout_marginEnd="10dp" android:textStyle="bold"/>
        <Button
                android:text="@string/mminus"
                android:layout_width="60dp"
                android:layout_height="wrap_content" android:id="@+id/memMinus" android:padding="0dp"
                android:layout_marginEnd="10dp" android:textStyle="bold"/>
        <Button
                android:text="@string/mplus"
                android:layout_width="60dp"
                android:layout_height="wrap_content" android:id="@+id/memPlus" android:padding="0dp"
                android:textStyle="bold"/>
        <Button
                android:text="@string/backspace"
                android:layout_width="60dp"
                android:layout_height="wrap_content" android:id="@+id/backspace" android:padding="0dp"
                android:layout_marginEnd="10dp" android:textStyle="bold" android:backgroundTint="#7B8874"/>
        <Button
                android:text="@string/ce"
                android:layout_width="60dp"
                android:layout_height="wrap_content" android:id="@+id/clearEverything" android:padding="0dp"
                android:layout_marginEnd="10dp" android:textStyle="bold"/>
        <Button
                android:text="@string/clear"
                android:layout_width="60dp"
                android:layout_height="wrap_content" android:id="@+id/clear" android:padding="0dp"
                android:layout_marginEnd="10dp" android:textStyle="bold" android:backgroundTint="#7B8874"/>
        <Button
                android:text="@string/plusminus"
                android:layout_width="60dp"
                android:layout_height="wrap_content" android:id="@+id/plusMinus" android:padding="0dp"
                android:layout_marginEnd="10dp" android:textStyle="bold" android:backgroundTint="#7B8874"/>
        <Button
                android:text="@string/sqrRoot"
                android:layout_width="60dp"
                android:layout_height="wrap_content" android:id="@+id/sqrt" android:padding="0dp"
                android:textStyle="bold" android:tag="Sqrt" android:backgroundTint="#7B8874"/>
        <Button
                android:text="@string/_7"
                android:layout_width="60dp"
                android:layout_height="wrap_content" android:id="@+id/num7" android:padding="0dp"
                android:layout_marginEnd="10dp" android:backgroundTint="#535353"/>
        <Button
                android:text="@string/_8"
                android:layout_width="60dp"
                android:layout_height="wrap_content" android:id="@+id/num8" android:padding="0dp"
                android:layout_marginEnd="10dp" android:backgroundTint="#535353"/>
        <Button
                android:text="@string/_9"
                android:layout_width="60dp"
                android:layout_height="wrap_content" android:id="@+id/num9" android:padding="0dp"
                android:layout_marginEnd="10dp" android:backgroundTint="#535353"/>
        <Button
                android:text="@string/divide"
                android:layout_width="60dp"
                android:layout_height="wrap_content" android:id="@+id/division" android:padding="0dp"
                android:layout_marginEnd="10dp" android:textStyle="bold" android:tag="/"
                android:backgroundTint="#7B8874"/>
        <Button
                android:text="@string/percentage"
                android:layout_width="60dp"
                android:layout_height="wrap_content" android:id="@+id/percent" android:padding="0dp"
                android:textStyle="bold"/>
        <Button
                android:text="@string/_4"
                android:layout_width="60dp"
                android:layout_height="wrap_content" android:id="@+id/num4" android:padding="0dp"
                android:layout_marginEnd="10dp" android:backgroundTint="#535353"/>
        <Button
                android:text="@string/_5"
                android:layout_width="60dp"
                android:layout_height="wrap_content" android:id="@+id/num5" android:padding="0dp"
                android:layout_marginEnd="10dp" android:backgroundTint="#535353"/>
        <Button
                android:text="@string/_6"
                android:layout_width="60dp"
                android:layout_height="wrap_content" android:id="@+id/num6" android:padding="0dp"
                android:layout_marginEnd="10dp" android:backgroundTint="#535353"/>
        <Button
                android:text="@string/multiply"
                android:layout_width="60dp"
                android:layout_height="wrap_content" android:id="@+id/multiply" android:padding="0dp"
                android:layout_marginEnd="10dp" android:textStyle="bold" android:tag="*"
                android:backgroundTint="#7B8874"/>
        <Button
                android:text="@string/_1x"
                android:layout_width="60dp"
                android:layout_height="wrap_content" android:id="@+id/oneDevidedByX" android:padding="0dp"
                android:textStyle="bold"/>
        <Button
                android:text="@string/_1"
                android:layout_width="60dp"
                android:layout_height="wrap_content" android:id="@+id/num1" android:padding="0dp"
                android:layout_marginEnd="10dp" android:backgroundTint="#535353"/>
        <Button
                android:text="@string/_2"
                android:layout_width="60dp"
                android:layout_height="wrap_content" android:id="@+id/num2" android:padding="0dp"
                android:layout_marginEnd="10dp" android:backgroundTint="#535353"/>
        <Button
                android:text="@string/_3"
                android:layout_width="60dp"
                android:layout_height="wrap_content" android:id="@+id/num3" android:padding="0dp"
                android:layout_marginEnd="10dp" android:backgroundTint="#535353"/>
        <Button
                android:text="@string/minus"
                android:layout_width="60dp"
                android:layout_height="wrap_content" android:id="@+id/minus" android:padding="0dp"
                android:layout_marginEnd="10dp" android:textSize="24sp" android:textStyle="bold" android:tag="-"
                android:backgroundTint="#7B8874"/>
        <Button
                android:text="@string/equal"
                android:layout_width="60dp"
                android:layout_height="96dp" android:id="@+id/equal" android:padding="0dp" app:layout_rowSpan="2"
                android:textSize="24sp" android:textStyle="bold"/>
        <Button
                android:text="@string/_0"
                android:layout_width="130dp"
                android:layout_height="wrap_content" android:id="@+id/num0" android:padding="0dp"
                android:layout_marginEnd="10dp" app:layout_columnSpan="2" android:backgroundTint="#535353"/>
        <Button
                android:text="@string/comma"
                android:layout_width="60dp"
                android:layout_height="wrap_content" android:id="@+id/comma" android:padding="0dp"
                android:layout_marginEnd="10dp" android:backgroundTint="#535353"/>
        <Button
                android:text="@string/plus"
                android:layout_width="60dp"
                android:layout_height="wrap_content" android:id="@+id/plus" android:padding="0dp"
                android:layout_marginEnd="10dp" android:textStyle="bold" android:tag="+"
                android:backgroundTint="#7B8874"/>
    </androidx.gridlayout.widget.GridLayout>
    <TextView
            android:layout_width="337dp"
            android:layout_height="52dp"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/calcScreenTop"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="118dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="62dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="35dp" android:layout_marginEnd="36dp"
            app:layout_constraintEnd_toEndOf="parent" android:editable="false"
            app:layout_constraintVertical_bias="0.048" android:backgroundTint="#A8A8A8" android:background="#74979797"
            android:textSize="20sp" app:layout_constraintHorizontal_bias="0.95"/>
    <TextView
            android:layout_width="338dp"
            android:layout_height="75dp"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/calcScreenBottom"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="118dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="62dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="35dp" android:layout_marginEnd="36dp"
            app:layout_constraintEnd_toEndOf="parent" android:editable="false"
            app:layout_constraintVertical_bias="0.155" android:backgroundTint="#A8A8A8" android:background="#74979797"
            android:textSize="34sp" app:layout_constraintHorizontal_bias="0.947"/>

</androidx.constraintlayout.widget.ConstraintLayout>